# core-server-infra

./: .flake8  README.md  main.tf  outputs.tf  prod.tfvars  staging.tfvars  variables.tf
.github/workflows/: deploy.yml
handlers/ecs/entryextraction/: app.py  const.py  eval.py  eval_helpers.py  extraction.py  geolocation.py  models.py  postprocess_tags.py  pyproject.toml  tags.py  tags_mapping.py  tags_to_ids.py  test.ipynb  utils.py
handlers/ecs/entryextraction_llm/: Dockerfile  app.py  extraction.py  models.py  pyproject.toml
handlers/ecs/entryextraction_llm/llm/: model_extraction.py  model_prediction.py  prompt_utils.py  utils.py
handlers/ecs/geolocations/: Dockerfile  app.py  pyproject.toml
handlers/ecs/ngrams/: app.py  pyproject.toml
handlers/ecs/summarization/: Dockerfile  app.py  pyproject.toml
handlers/ecs/summarization_v2/: app.py  pyproject.toml
handlers/ecs/summarization_v3/: app.py  custom_metric.py  prompts.py  pyproject.toml  summarizer_llm.py  summary_generator.py
handlers/ecs/textextraction/: Dockerfile  app.py  content_types.py  pyproject.toml  s3handler.py  utils.py  wget.py
handlers/ecs/topicmodeling/: Dockerfile  app.py  group_tags.py  pyproject.toml  topic_generator_llm.py  utils.py
handlers/lambda/reliability/: Dockerfile  app.py
mockserver/: app.py  pyproject.toml
modules/cloudmap/: main.tf  outputs.tf  variables.tf
modules/database/: main.tf  outputs.tf  secrets.tf  security_grps.tf  variables.tf
modules/ecsmodules/cloudflare_proxy/: cloudwatch.tf  ecs.tf  outputs.tf  roles.tf  variables.tf
modules/ecsmodules/entryextraction/: alb.tf  autoscaling.tf  cloudwatch.tf  ecs.tf  outputs.tf  roles.tf  securitygrps.tf  variables.tf
modules/ecsmodules/entryextraction_llm/: alb.tf  autoscaling.tf  cloudwatch.tf  ecs.tf  outputs.tf  roles.tf  securitygrps.tf  variables.tf
modules/ecsmodules/geolocations/: alb.tf  autoscaling.tf  cloudwatch.tf  ecs.tf  outputs.tf  roles.tf  securitygrps.tf  variables.tf
modules/ecsmodules/ngrams/: cloudwatch.tf  ecs.tf  outputs.tf  variables.tf
modules/ecsmodules/ngrams/templates/ecr_image/: image.json
modules/ecsmodules/summarization/: cloudwatch.tf  ecs.tf  outputs.tf  variables.tf
modules/ecsmodules/summarization/templates/ecr_image/: image.json
modules/ecsmodules/summarization_v2/: autoscaling.tf  cloudwatch.tf  ecs.tf  outputs.tf  roles.tf  variables.tf
modules/ecsmodules/summarization_v3/: alb.tf  autoscaling.tf  cloudwatch.tf  ecs.tf  outputs.tf  roles.tf  securitygrps.tf  variables.tf
modules/ecsmodules/textextraction/: alb.tf  autoscaling.tf  cloudwatch.tf  ecs.tf  outputs.tf  roles.tf  securitygrps.tf  variables.tf
modules/ecsmodules/topicmodeling/: alb.tf  autoscaling.tf  cloudwatch.tf  ecs.tf  outputs.tf  roles.tf  securitygrps.tf  variables.tf
modules/ecsmodules/topicmodeling/templates/ecr_image/: image.json
modules/efs/: main.tf  outputs.tf  securitygrp.tf  variables.tf
modules/lambda/reliability/: main.tf  variables.tf
modules/redis/: main.tf  outputs.tf  secrets.tf  security_grps.tf  variables.tf
modules/s3/: main.tf  outputs.tf  variables.tf
modules/secrets/: outputs.tf  ssm.tf
modules/server/: acm_certificate.tf  alb.tf  cloudwatch.tf  ecs.tf  iam_roles.tf  outputs.tf  secrets.tf  securitygrps.tf  variables.tf  vpc.tf
modules/server/templates/ecr_image/: image.json
modules/sqs/: main.tf  outputs.tf  variables.tf
modules/vpc/: main.tf  outputs.tf  variables.tf
