[tool.poetry]
name = "ngrams"
version = "0.1.0"
description = ""
authors = ["dev <dev@togglecorp.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
boto3 = "*"
flask = "*"
psycopg2-binary = "*"
requests = "*"
ngrams_generator = { git = "https://github.com/the-deep-nlp/ngrams-generator.git", rev = "f5c53e3", branch = "main" }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
