[tool.poetry]
name = "entry_extraction"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io>"]

[tool.poetry.dependencies]
python = ">=3.8"
sentry-sdk = "==1.5.8"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
numpy = "*"
pandas = "*"
nlp_modules_utils = { git = "https://github.com/the-deep-nlp/nlp-modules-utils.git", rev = "861a841", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
