[tool.poetry]
name = "entry_extraction"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io>"]

[tool.poetry.dependencies]
python = ">=3.8"
sentry-sdk = "==1.5.8"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
numpy = "*"
pandas = "*"
cloudpathlib = "==0.13.0"
nlp_modules_utils = { git = "https://github.com/the-deep-nlp/nlp-modules-utils.git", rev = "addb414", branch = "main" }
geolocation_generator = { git = "https://github.com/the-deep-nlp/geolocation-generator.git", rev = "8d70ccf", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
