[tool.poetry]
name = "geolocations"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "==1.26.106"
cloudpathlib= "==0.13.0"
psycopg2-binary = "*"
geolocation_generator = { git = "https://github.com/ranjan-stha/geolocation-generator", rev = "ccb43a7", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
