[tool.poetry]
name = "geolocations"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io>"]

[tool.poetry.dependencies]
python = "^3.8"
cloudpathlib= "==0.13.0"
typing_extensions = "==4.4.0"
geolocation_generator = { git = "https://github.com/the-deep-nlp/geolocation-generator", rev = "44c0c6b", branch = "main" }
sentry-sdk = "==1.5.8"
nlp_modules_utils = { git = "https://github.com/the-deep-nlp/nlp-modules-utils.git", rev = "74f3f2c", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
