[tool.poetry]
name = "geolocations"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io>"]

[tool.poetry.dependencies]
python = ">=3.8"
sentry-sdk = "==1.5.8"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
cloudpathlib= "==0.13.0"
geolocation_generator = { git = "https://github.com/the-deep-nlp/geolocation-generator.git", rev = "ba2ced7", branch = "main" }
nlp_modules_utils = { git = "https://github.com/the-deep-nlp/nlp-modules-utils.git", rev = "bc82d18", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
