[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = ""
authors = ["dev <dev@togglecorp.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
boto3 = "*"
huggingface-hub = "*"
psycopg2-binary = "*"
reports_generator = { git = "https://github.com/the-deep/reports_generator", rev = "b89aa74", branch = "main" }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
