[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io>"]

[tool.poetry.dependencies]
python = ">=3.8"
boto3 = "*"
huggingface-hub = "*"
psycopg2-binary = "*"
the_deep_reports_generator = { git = "https://github.com/the-deep-nlp/the-deep-reports-generator", rev = "fbe6f515728b29ff278b4f4a2e6b6bad2e8366b7", branch = "main" }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
