[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io>"]

[tool.poetry.dependencies]
python = ">=3.8"
boto3 = "*"
huggingface-hub = "*"
psycopg2-binary = "*"
the_deep_reports_generator = { git = "https://github.com/the-deep-nlp/the-deep-reports-generator", rev = "e371d31", branch = "main" }
sentry-sdk = "==1.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
