[tool.poetry]
name = "text_extraction"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io>"]

[tool.poetry.dependencies]
python = ">=3.8"
huggingface-hub = "*"
sentry-sdk = "==1.5.8"
the_deep_reports_generator = { git = "https://github.com/the-deep-nlp/the-deep-reports-generator", rev = "e371d31", branch = "main" }
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
nlp_modules_utils = { git = "https://github.com/the-deep-nlp/nlp-modules-utils.git", rev = "addb414", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
