[tool.poetry]
name = "summarization_v3"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
sentry-sdk = "==1.5.8"
openai = ">=0.27.8"
langchain = ">=0.0.238"
tiktoken = ">=0.4.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
nlp_modules_utils = { git = "https://github.com/the-deep-nlp/nlp-modules-utils.git", rev = "68c61bb", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
