[tool.poetry]
name = "text_extraction"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
sentry-sdk = "==1.5.8"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
ocr_extractor = { git = "https://github.com/the-deep-nlp/ocr-extractor.git", rev = "b996585", branch = "main" }
deep-parser = { git = "https://github.com/the-deep/deepex.git", rev="c73698c", branch = "newformat2" }
nlp_modules_utils = { git = "https://github.com/the-deep-nlp/nlp-modules-utils.git", rev = "bc82d18", branch = "main" }
aiofiles = "==23.2.1"
numpy = "<=1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
