[tool.poetry]
name = "topic_modeling"
version = "0.1.0"
description = ""
authors = ["dev <nlp@thedeep.io"]

[tool.poetry.dependencies]
python = ">=3.8"
pillow = "==9.0.0"
topic_generator = { git = "https://github.com/the-deep-nlp/topic-generator", rev = "b63a87e", branch = "main" }
sentry-sdk = "==1.5.8"
nlp_modules_utils = { git = "https://github.com/the-deep-nlp/nlp-modules-utils.git", rev = "68c61bb", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
